fix the flickering by delaying and throwing
Explanation coming on my blog, math2001.github.io, something like
"lessons learned from re writing MarkdownLivePreview"

--- a/resources/stylesheet.css
+++ b/resources/stylesheet.css
@@ -4,7 +4,8 @@ html {
 }
 
 body {
-	font-family: "Ubuntu", "DejaVu Sans", "Open Sans", sans-serif;
+    font-family: "Ubuntu", "DejaVu Sans", "Open Sans", sans-serif;
+    font-size: 15px;
 }
 
 blockquote {
